# lambda

./: .gitignore  Cargo.toml  Dockerfile  README.Docker.md  compose.yaml  readme.Docker.md  readme.md  rust-toolchain.toml
.github/workflows/: docker-image.yml  release-package.yml
data/: config.toml  main.db
data/static/: script.js  style.css  vendors.css  vendors.js
deploy/data/: config.toml  main.db
deploy/data/static/: script.js  vendors.css  vendors.js
doc/: database_ddl.sql
src/: auth.rs  cli.rs  config.rs  error.rs  main.rs  model.rs  rpc.rs  schema.rs  templates.rs  util.rs  web.rs  web_error.rs
src/templates/: author-add.rs  author.rs  authors.rs  graffiti-add.rs  graffiti.rs  graffitis.rs  header.rs  help.rs  home.rs  login.rs  mod.rs  tags.rs
src/web/: auth.rs  mod.rs  mvc.rs
src/web/mvc/: controller.rs  model.rs  view.rs
