[package]
name = "lambda"
version = "0.1.0"
authors = ["FredericaBernkastel <bernkastel.frederica@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
actix-files = "0.2.1"
r2d2 = "0.8"
r2d2_sqlite = "0.14"
rusqlite = { version = "0.21.0", features = ["bundled"] }
env_logger = "0.7.1"
maud = "*"
toml = "*"
serde = "*"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1