[package]
name = "lambda"
version = "0.4.0"
authors = ["FredericaBernkastel <bernkastel.frederica@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
actix-http = "1"
actix-files = "0.2.1"
actix-session = "0.3.0"
r2d2 = "0.8"
r2d2_sqlite = "0.14"
rusqlite = { version = "0.21.0", features = ["bundled"] }
env_logger = "0.7.1"
maud = "*"
toml = "*"
serde = "*"
serde_json = "*"
serde_repr = "0.1"
bytes = "*"
path-tree = "0.1.9"
lazy_static = "*"
clap = "2.33.0"
sha2 = "0.8.1"
rand = "0.7.3"
hex-slice = "0.1.4"
chrono = "0.4"
strum = "0.18.0"
strum_macros = "0.18.0"
futures = "*"
base64 = "0.12.0"
image = { version = "0.23.2", default-features = false, features = ["jpeg"] }
regex = "*"
runtime-fmt = {git = "https://github.com/ludios/runtime-fmt"}
error-chain = "0.12.2"
flate2 = "1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
